2018-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Work for mailto urls.

	* w3m.el (w3m-url-readable-string): Make w3m-url-decode-string detect
	coding system for mailto url instead of using w3m-url-coding-system.
	(w3m-fontify-anchors, w3m-goto-url): Don't encode mailto url.
	(w3m-goto-mailto-url): Remove CR from, but preserve LF in mailto url;
	don't decode mailto url containing non-ASCII letters.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	Update faces for all navigation cases ([emacs-w3m:12969]).

	* w3m-session.el (w3m--session-update-faces): New function for
	`pre-command-hook' and `post-command-hook' in w3m-session buffers.
	(w3m-session-select-mode): Apply it.
	(w3m-session-select-list-all-sessions, w3m-session-select-next):
	Don't set the "selected" face, because it is now done by the new hook
	function.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	Fix two bugs in navigating the w3m-session-select popup window
	([emacs-w3m:12968]).

	* w3m-session.el (w3m-session-select-list-all-sessions): Fix navigation
	errors that happen when using functions beginning-of-buffer,
	end-of-buffer.
	(w3m-session-select-next): Fix navigation so previous line of first
	rotates back to last line. Remove unnecessary loop.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-mode): Don't visually indicate non-breaking spaces
	([emacs-w3m:12967]).

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	Bugfix for the creation of session pop-up window ([emacs-w3m:12966]).

	* w3m.el (w3m--setup-popup-window): New function.
	(w3m-select-buffer): Use it.
	(w3m-select-buffer-horizontal-window): Update documentation.

	* w3m-session.el (w3m-session-select): Use the new function, thus
	fixing a display bug, and making popup windows consistent.

2018-05-09  Boruch Baum  <boruch_baum@gmx.com>

	Uniform error handling and message presentation ([emacs-w3m:12964]).

	* w3m.el (w3m--buffer-busy-error): New function for uniform error
	handling and message presentation.